# MultiAgentResearchDocs_Generator

./: README.md  dashboard_spec.json  data_analysis.md  ethics_assessment.md  master_report.md  presentation.md  pyproject.toml  report.md  research_brief.docx  research_brief.md  tracking_template.csv  tracking_template.xlsx
frontend/: index.html
multiagentresearchassistant/: README.md  config_examples.json  pyproject.toml  report.md  report_template.md
multiagentresearchassistant/src/multiagentresearchassistant/: crew.py  main.py
multiagentresearchassistant/src/multiagentresearchassistant/config/: agents.yaml  tasks.yaml
outputs/: master_report.tex
src/: app.py  data_analysis.md  report.md  research_brief.docx  research_brief.md  streamlit_app.py  wsgi.py
src/medical_report_system/: crew.py  main.py
src/medical_report_system/config/: agents.yaml  tasks.yaml
src/medical_report_system/frontend/: index.html
