[project]
name = "multiagentresearchassistant"
version = "0.1.0"
description = "MultiAgentResearchAssistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
multiagentresearchassistant = "multiagentresearchassistant.main:run"
run_crew = "multiagentresearchassistant.main:run"
train = "multiagentresearchassistant.main:train"
replay = "multiagentresearchassistant.main:replay"
test = "multiagentresearchassistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
